tests/dataset/tpc-ds/compiler/kotlin/q42.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q42.kt:91:19: error: type mismatch: inferred type is Int? but Int was expected
        __res.add((x as MutableMap<String, Int>)["price"])
                  ^
